feat: completed user endpoint

--- a/src/docs/user.docs.yaml
+++ b/src/docs/user.docs.yaml
@@ -7,7 +7,7 @@ components:
         id:
           type: string
           description: The auto-generated id of the user
-        username:
+        name:
           type: string
         email:
           type: string
@@ -16,12 +16,12 @@ components:
         phone:
           type: string
       required:
-        - username
+        - name
         - email
         - password
         - phone
       example:
-        username: "JohnKey88"
+        name: "JohnKey88"
         email: "johnkey@example.com"
         password: "password123"  # Note: passwords should not be stored in plain text.
         phone: "873847872834"
@@ -78,6 +78,29 @@ components:
         city: "Jakarta"
         province: "Jakarta"
 
+    UserResponse:
+      type: object
+      properties:
+        user:
+          properties:
+            id:
+              type: string
+              example: "clzmracg70000dbhtdv53eacc"
+            name:
+              type: string
+              example: "Ngolo Kante"
+            email:
+              type: string
+              example: "gulugulu@example.com"
+            phone:
+              type: string
+              example: "09827384534"
+        profile:
+          $ref: '#/components/schemas/Profile'
+        address:
+          $ref: '#/components/schemas/Address'
+
+
 paths:
   /api/v1/users/register:
     post:
@@ -91,7 +114,7 @@ paths:
             schema:
               type: object
               properties:
-                username:
+                name:
                   type: string
                   example: "John Key"
                 email:
@@ -148,23 +171,8 @@ paths:
                   status:
                     type: string
                     example: "SUCCESS"
-                  data:
-                    type: object
-                    properties:
-                      user:
-                        name:
-                          type: string
-                          example: "John Key"
-                        email:
-                          type: string
-                          example: "0Z6p6@example.com"
-                        phone:
-                          type: string
-                          example: "873847872834"                        
-                      profile:
-                        $ref: '#/components/schemas/Profile'
-                      address:
-                        $ref: '#/components/schemas/Address'
+                  data:                                        
+                    $ref: '#/components/schemas/UserResponse'                  
         '400':
           description: Bad request
         '500':
@@ -189,73 +197,166 @@ paths:
                   userData:
                     type: array
                     items:
-                      type: object
-                      properties:
-                        id:
-                          type: string
-                          example: "clzmracg70000dbhtdv53eacc"
-                        name:
-                          type: string
-                          example: "Ngolo Kante"
-                        email:
-                          type: string
-                          example: "gulugulu@example.com"
-                        phone:
-                          type: string
-                          example: "09827384534"
-                        profile:
-                          type: object
-                          properties:
-                            id:
-                              type: string
-                              example: "clzmracgb0002dbhtusg0hvt4"
-                            birth_date:
-                              type: string
-                              format: date-time
-                              example: "1988-02-10T12:00:00.000Z"
-                            birth_place:
-                              type: string
-                              example: "Paris"
-                            gender:
-                              type: string
-                              example: "L"
-                            identity_number:
-                              type: string
-                              example: "9112939847491246"
-                            identity_type:
-                              type: string
-                              example: "KTP"
-                            user_id:
-                              type: string
-                              example: "clzmracg70000dbhtdv53eacc"
-                        address:
-                          type: object
-                          properties:
-                            id:
-                              type: string
-                              example: "clzmracgf0004dbht8miooflw"
-                            street:
-                              type: string
-                              example: "Jl. Pahlawan No. 17"
-                            post_code:
-                              type: string
-                              example: "60256"
-                            village:
-                              type: string
-                              example: "Cibadak"
-                            district:
-                              type: string
-                              example: "Cisolok"
-                            city:
-                              type: string
-                              example: "Ciamis"
-                            province:
-                              type: string
-                              example: "Jawa Barat"
-                            user_id:
-                              type: string
-                              example: "clzmracg70000dbhtdv53eacc"                
+                      $ref: '#/components/schemas/UserResponse'                                 
         '400':
           description: Bad request
         '500':
           description: Internal server error
+
+  /api/v1/users/getOne/{id}:
+    get:
+      tags: [User]
+      summary: Get one user
+      description: Get one user
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: The user ID
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "SUCCESS"
+                  userData:
+                    type: object
+                    $ref: '#/components/schemas/UserResponse'
+        '400':
+          description: Bad request
+        '500':
+          description: Internal server error
+
+  /api/v1/users/update/{id}:
+    put:
+      tags: [User]
+      summary: Update user
+      description: Update user
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: The user ID
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  example: "John Key"
+                email:
+                  type: string
+                  example: "0Z6p6@example.com"
+                password:
+                  type: string
+                  example: "password123"
+                phone:
+                  type: string
+                  example: "873847872834"
+                birth_date:
+                  type: string
+                  format: date-time
+                  example: "1988-02-10T12:00:00.000Z"
+                birth_place:
+                  type: string
+                  example: "Jakarta"
+                gender:
+                  type: string
+                  example: "L"
+                identity_number:
+                  type: string
+                  example: "92184791742369"
+                identity_type:
+                  type: string
+                  example: "ktp"
+                street:
+                  type: string
+                  example: "Jl. Kebon Jeruk"
+                post_code:
+                  type: string
+                  example: "10210"
+                village:
+                  type: string
+                  example: "Kebon Jeruk"
+                district:
+                  type: string
+                  example: "Kebon Jeruk"
+                city:
+                  type: string
+                  example: "Jakarta"
+                province:
+                  type: string
+                  example: "Jakarta"
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "SUCCESS"
+                  message:
+                    type: string
+                    example: "User updated successfully"
+                  data:
+                    type: object
+                    $ref: '#/components/schemas/UserResponse'
+        '400':
+          description: Bad request
+        '500':
+          description: Internal server error
+
+
+  /api/v1/users/delete/{id}:
+    delete:
+      tags: [User]
+      summary: Delete user
+      description: Delete user
+      parameters:
+        - in: path
+          name: id
+          schema:
+            type: string
+          required: true
+          description: The user ID  
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: "SUCCESS"
+                  message:
+                    type: string
+                    example: "User deleted successfully"
+        '400':
+          description: Bad request
+        '500':
+          description: Internal server error
+
+
+
+
+
+                          
+                            
+                            
