--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon src/index.js",
-    "test": "NODE_ENV=test jest --testTimeout=10000 --runInBand",
+    "test": "NODE_ENV=test jest --testTimeout=10000",
     "migrate:dev": "npx prisma migrate dev --name init"
   },
   "jest": {
